--- a/bee-node/bee-node/config.chrysalis-mainnet.toml
+++ b/bee-node/bee-node/config.chrysalis-mainnet.toml
@@ -122,13 +122,13 @@ delta       = "https://cdn.tanglebay.com/snapshots/mainnet/delta_snapshot.bin"
 [pruning.milestones]
 enabled                = true
 max_milestones_to_keep = 60480
-[pruning.receipts]
-enabled                = false
-[pruning.by_size]
+[pruning.size]
 enabled                = true
 target_size            = "30GB"
 threshold_percentage   = 10.0
 cooldown_time          = "5m"
+[pruning.receipts]
+enabled                = false
 
 [storage]
 path = "./storage/mainnet/tangle"
