--- a/bee-metrics/Cargo.toml
+++ b/bee-metrics/Cargo.toml
@@ -11,7 +11,10 @@ keywords = [ "iota", "tangle", "bee", "metrics", "prometheus" ]
 homepage = "https://www.iota.org"
 
 [dependencies]
-prometheus-client = "0.15.1"
-axum = "0.4.8"
-tokio = { version = "1", features = ["full"] }
-parking_lot = "0.12.0"
+prometheus-client = { version = "0.15.1", default-features = false }
+axum = { version = "0.4.8", default-features = false }
+parking_lot = { version = "0.12.0", default-features = false }
+tokio = { version = "1.17.0", features = ["process"], default-features = false }
+
+[dev-dependencies]
+tokio = { version = "1.17.0", features = ["time"], default-features = false }
