Add JWT support for API and Dashboard (#984)
* Add API JWT changes

* Add Dashboard JWT changes

* Moving Dashboard auth logic

* Lazy static regex generation; make use of RegexSet; complete permission filter

* Format permission.rs

* Format output.rs

* Remove "extern crate" imports; document JWT Bearer

* Base64 decode JWT payload to categorize JWT audience

* Format jwt_api.rs

* Read JWT payload to find out how to validate it correctly

* Pass dashboard username

* Fix var name

* Fix config naming

* Add dashboard feature in bee-rest-api

* Fix bee-rest-api dependency in builder.rs

* Update .json config files

* rustfmt

* Introduce MAX_RESPONSE_RESULTS constant

* Improve naming of types and fields

* Fix namings

* Fix dependency in builder.rs

* Fix field name in builder.rs

* Fix another field in builder.rs

* Return slice directly; .expect() instead of panic!

* Fix trait bounds in peer.rs

* Required async function

* Require "dashboard" feature in permission.rs

* Fix clippy

* Collapse if statements in permission.rs

* rustfmt

* Collapse more if statements

* Remove unneeded reference

* Refactor "CustomRejection" for Dashboard

* Fix imports

* Fix internal server errors

* rustfmt

* Update dependencies, format, fix clippy

* Fix typo in config.rs

* Adjust println of JWT tool

* Rename config structs

* Update builder.rs

* Update bee-node/bee-plugin/bee-plugin-dashboard/src/lib.rs

Co-authored-by: Adam Gleave <adamg108@hotmail.co.uk>

* Update bee-api/bee-rest-api/src/endpoints/config.rs

Co-authored-by: Adam Gleave <adamg108@hotmail.co.uk>

* Update bee-api/bee-rest-api/src/endpoints/routes/api/v1/output.rs

Co-authored-by: Adam Gleave <adamg108@hotmail.co.uk>

* Format feature field; Rename "binding_socket_addr" > "bind_socket_addr"; pub(crate) route_to_regex; return &str instead &String

* Document JWT splitting

* Document base64 decoding

* Fi

--- a/bee-node/bee-node/config.chrysalis-mainnet.toml
+++ b/bee-node/bee-node/config.chrysalis-mainnet.toml
@@ -85,32 +85,24 @@ milestone_sync_count  = 200
 
 [rest_api]
 bind_address          = "/ip4/0.0.0.0/tcp/14265"
-feature_proof_of_work = true
+jwt_salt              = "Bee"
 public_routes         = [
-    "/health",
-    "/api/v1/info",
-    "/api/v1/tips",
-    "/api/v1/messages",
-    "/api/v1/messages/:messageId",
-    "/api/v1/messages/:messageId/metadata",
-    "/api/v1/messages/:messageId/raw",
-    "/api/v1/messages/:messageId/children",
-    "/api/v1/outputs/:outputId",
-    "/api/v1/addresses/:address",
-    "/api/v1/addresses/ed25519/:address",
-    "/api/v1/addresses/:address/outputs",
-    "/api/v1/addresses/ed25519/:address/outputs",
-    "/api/v1/receipts",
-    "/api/v1/receipts/:milestoneIndex",
-    "/api/v1/treasury",
-    "/api/v1/transactions/:transactionId/included-message",
-    "/api/v1/milestones/:milestoneIndex",
-    "/api/v1/milestones/:milestoneIndex/utxo-changes",
+      "/health",
+      "/api/v1/info",
+      "/api/v1/tips",
+      "/api/v1/messages*",
+      "/api/v1/transactions*",
+      "/api/v1/milestones*",
+      "/api/v1/outputs*",
+      "/api/v1/addresses*",
+      "/api/v1/treasury",
+      "/api/v1/receipts*",
 ]
-allowed_ips = [
-    "127.0.0.1",
-    "::1"
+protected_routes       = [
+      "/api/v1/*",
+      "/api/plugins/*"
 ]
+feature_proof_of_work = true
 white_flag_solidification_timeout = 2
 
 [snapshot]
