--- a/bee-api/bee-rest-api/Cargo.toml
+++ b/bee-api/bee-rest-api/Cargo.toml
@@ -22,14 +22,18 @@ bee-storage = { version = "0.11.0", path = "../../bee-storage/bee-storage", defa
 bee-tangle = { version = "0.3.0", path = "../../bee-tangle", default-features = false, optional = true }
 
 async-trait = { version = "0.1.51", default-features = false, optional = true }
+auth-helper = { version = "0.2.0", default-features = false }
+base64 = { version = "0.13.0", default-features = false}
 bech32 = { version = "0.8.1", default-features = false, optional = true }
 digest = { version = "0.9.0", default-features = false, optional = true }
 futures = { version = "0.3.17", default-features = false, optional = true }
 hex = { version = "0.4.3", default-features = false }
 iota-crypto = { version = "0.9.1", default-features = false, features = [ "blake2b" ], optional = true }
+lazy_static = {version = "1.4.0", default-features = false }
 log = { version = "0.4.14", default-features = false, optional = true }
 multiaddr = { version = "0.13.0", default-features = false }
 num_cpus = { version = "1.13.0", default-features = false, optional = true }
+regex = { version = "1.5.4", default-features = false }
 serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
 serde_json = { version = "1.0.68", default-features = false, features = [ "alloc" ] }
 thiserror = { version = "1.0.30", default-features = false }
@@ -40,6 +44,7 @@ warp = { version = "0.3.1", default-features = false, optional = true }
 
 [features]
 default = [ "peer" ]
+dashboard = []
 endpoints = [
   "bee-common",
   "bee-gossip",
