--- a/bee-node/bee-node/Cargo.toml
+++ b/bee-node/bee-node/Cargo.toml
@@ -31,7 +31,7 @@ bee-tangle = { version = "0.3.0", path = "../../bee-tangle", default-features = 
 
 anymap = { version = "0.12.1", default-features = false }
 async-trait = { version = "0.1.51", default-features = false }
-auth-helper = { version = "0.1.0", default-features = false }
+auth-helper = { version = "0.2.0", default-features = false }
 cfg-if = { version = "1.0.0", default-features = false }
 chrono = { version = "0.4.19", default-features = false }
 ed25519 = { version = "1.3.0", default-features = false, features = [ "alloc", "pkcs8" ] }
@@ -67,7 +67,7 @@ path = "src/main.rs"
 [features]
 default = [ "rocksdb" ]
 
-dashboard = [ "bee-plugin-dashboard" ]
+dashboard = [ "bee-plugin-dashboard", "bee-rest-api/dashboard" ]
 rocksdb = [ "bee-storage-rocksdb" ]
 sled = [ "bee-storage-sled" ]
 trace = [
