--- a/bee-node/bee-node/config.chrysalis-devnet.json
+++ b/bee-node/bee-node/config.chrysalis-devnet.json
@@ -60,32 +60,24 @@
   },
   "restApi": {
     "bindAddress": "/ip4/0.0.0.0/tcp/14265",
-    "featureProofOfWork": true,
+    "jwtSalt": "Bee",
     "publicRoutes": [
       "/health",
       "/api/v1/info",
       "/api/v1/tips",
-      "/api/v1/messages",
-      "/api/v1/messages/:messageId",
-      "/api/v1/messages/:messageId/metadata",
-      "/api/v1/messages/:messageId/raw",
-      "/api/v1/messages/:messageId/children",
-      "/api/v1/outputs/:outputId",
-      "/api/v1/addresses/:address",
-      "/api/v1/addresses/ed25519/:address",
-      "/api/v1/addresses/:address/outputs",
-      "/api/v1/addresses/ed25519/:address/outputs",
-      "/api/v1/receipts",
-      "/api/v1/receipts/:milestoneIndex",
+      "/api/v1/messages*",
+      "/api/v1/transactions*",
+      "/api/v1/milestones*",
+      "/api/v1/outputs*",
+      "/api/v1/addresses*",
       "/api/v1/treasury",
-      "/api/v1/transactions/:transactionId/included-message",
-      "/api/v1/milestones/:milestoneIndex",
-      "/api/v1/milestones/:milestoneIndex/utxo-changes"
+      "/api/v1/receipts*"
     ],
-    "allowedIps": [
-      "127.0.0.1",
-      "::1"
+    "protectedRoutes": [
+      "/api/v1/*",
+      "/api/plugins/*"
     ],
+    "featureProofOfWork": true,
     "whiteFlagSolidificationTimeout": 2
   },
   "snapshot": {
