--- a/bee-metrics/Cargo.toml
+++ b/bee-metrics/Cargo.toml
@@ -12,9 +12,9 @@ homepage = "https://www.iota.org"
 
 [dependencies]
 prometheus-client = { version = "0.15.1", default-features = false }
-axum = { version = "0.4.8", default-features = false }
+axum = { version = "0.4.8", default-features = false, features = ["http2"] }
 parking_lot = { version = "0.12.0", default-features = false }
-tokio = { version = "1.17.0", features = ["process"], default-features = false }
+tokio = { version = "1.17.0", features = [ "process" ], default-features = false }
 
 [dev-dependencies]
-tokio = { version = "1.17.0", features = ["time"], default-features = false }
+tokio = { version = "1.17.0", features = [ "time", "rt-multi-thread", "macros" ], default-features = false }
