--- a/bee-metrics/Cargo.toml
+++ b/bee-metrics/Cargo.toml
@@ -11,10 +11,10 @@ keywords = [ "iota", "tangle", "bee", "metrics", "prometheus" ]
 homepage = "https://www.iota.org"
 
 [dependencies]
-prometheus-client = { version = "0.15.1", default-features = false }
 axum = { version = "0.4.8", default-features = false, features = ["http2"] }
 parking_lot = { version = "0.12.0", default-features = false }
-tokio = { version = "1.17.0", features = [ "process" ], default-features = false }
+prometheus-client = { version = "0.15.1", default-features = false }
+tokio = { version = "1.17.0", default-features = false, features = [ "process" ] }
 
 [dev-dependencies]
-tokio = { version = "1.17.0", features = [ "time", "rt-multi-thread", "macros" ], default-features = false }
+tokio = { version = "1.17.0", default-features = false, features = [ "time", "rt-multi-thread", "macros" ] }
