--- a/bee-node/bee-node/Cargo.toml
+++ b/bee-node/bee-node/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bee-node"
-version = "1.0.0-alpha1"
+version = "1.0.0-alpha.2"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
 description = "Default node implementations."
