--- a/bee-api/bee-rest-api/Cargo.toml
+++ b/bee-api/bee-rest-api/Cargo.toml
@@ -48,6 +48,7 @@ tokio = { version = "1.17.0", default-features = false, optional = true }
 
 [features]
 default = [ "peer" ]
+dashboard = []
 endpoints = [
   "bee-gossip",
   "bee-protocol/workers",
