--- a/bee-identity/Cargo.toml
+++ b/bee-identity/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "bee-identity"
 version = "0.1.0"
+authors = [ "IOTA Stiftung" ]
 edition = "2021"
+description = "Creation and persistence of local node identities."
+readme = "README.md"
+repository = "https://github.com/iotaledger/bee"
+license = "Apache-2.0"
+keywords = [ "iota", "bee", "framework", "node", "identity" ]
+homepage = "https://www.iota.org"
 
 [dependencies]
 ed25519 = { version = "1.3.0", default-features = false, features = [ "alloc", "pkcs8" ] }
