--- a/bee-identity/Cargo.toml
+++ b/bee-identity/Cargo.toml
@@ -14,5 +14,6 @@ homepage = "https://www.iota.org"
 ed25519 = { version = "1.3.0", default-features = false, features = [ "alloc", "pkcs8" ] }
 hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
 libp2p-core = { version = "0.30.0", default-features = false }
+log = { version = "0.4.14", default-features = false }
 pkcs8 = { version = "0.8.0", default-features = false, features = [ "alloc", "pem", "std" ] }
 thiserror = { version = "1.0.30", default-features = false }
