Add the `bee-metrics` crate (#1300)
* add basic metrics functionality

* update memory metric more often

* use `ps` when the platform is unix-like

* document all the things

* add changelog

* rename memory usage metric

* rustfmt :trollface:

* move changelog

* add missing files

* clean dependencies

* re-export `prometheus_client` relevant types

* document panic

* update documentation

* remove panic

* remove other panic

* rename metrics config types

* move update interval to a constant

* track cpu% too

* update changelog

* fix dependencies and features

* update Cargo.toml

Co-authored-by: Jochen Görtler <grtlr@users.noreply.github.com>

* fix manifest formatting

* reorganize imports

* move metrics logic to `bee-node`

* align

* Update bee-metrics/Cargo.toml

* Update bee-protocol/src/workers/metrics.rs

* initialize the metrics registry earlier

* add registry earlier

* Update bee-node/bee-node/src/workers.rs

Co-authored-by: /alex/ <alexander.schmidt@iota.org>

* clippy and formatting

* Changelog nits

* Update bee-metrics/src/lib.rs

* remove unnecessary unwrap

* Non-default pid

* Update bee-node/bee-node/src/workers.rs

* Update bee-metrics/src/metrics.rs

Co-authored-by: Jochen Görtler <grtlr@users.noreply.github.com>
Co-authored-by: Thibault Martinez <thibault.martinez.30@gmail.com>
Co-authored-by: /alex/ <alexander.schmidt@iota.org>
Co-authored-by: Thibault Martinez <thibault@iota.org>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
 	"bee-common/bee-common-derive",
 	"bee-ledger",
 	"bee-message",
+	"bee-metrics",
 	"bee-network/bee-autopeering",
 	"bee-network/bee-gossip",
 	"bee-node/bee-node",
