Add `bee-identity` crate (#1217)
* Add 'bee-identity' crate

* Format

* Fix bee-autopeering doc test

* Fix broken intra-doc links (for real)

* Remove unused deps

* Add changelog, license and readme

* Refactoring

* Move identity migration to bee-identity

* Simplify identity struct

* Fix intra-doc links

* Rearrange args of bee-autopeering init

* Cleanup

* Remove commented lines

* Fix intra-doc links

* Address review comments; Format

* Address review comments

* Address more review comments

* Rename Identity private field

* Use generate instead of default method

* Fix doc

Co-authored-by: Thibault Martinez <thibault.martinez.30@gmail.com>

* Fix more docs

Co-authored-by: Thibault Martinez <thibault.martinez.30@gmail.com>

--- a/bee-node/bee-node/Cargo.toml
+++ b/bee-node/bee-node/Cargo.toml
@@ -14,6 +14,7 @@ homepage = "https://www.iota.org"
 bee-autopeering = { version = "0.5.0", path = "../../bee-network/bee-autopeering", default-features = false, features = [ "rocksdb1" ] }
 bee-common = { version = "0.6.0", path = "../../bee-common/bee-common", default-features = false }
 bee-gossip = { version = "0.6.0", path = "../../bee-network/bee-gossip", default-features = false, features = [ "full" ] }
+bee-identity = { version = "0.1.0", path = "../../bee-identity", default-features = false }
 bee-ledger = { version = "0.6.1", path = "../../bee-ledger", default-features = false, features = [ "workers" ] }
 bee-message = { version = "0.1.6", path = "../../bee-message", default-features = false }
 bee-metrics = { version = "0.1.0", path = "../../bee-metrics", default-features = false }
@@ -35,7 +36,6 @@ async-trait = { version = "0.1.51", default-features = false }
 auth-helper = { version = "0.2.0", default-features = false }
 cfg-if = { version = "1.0.0", default-features = false }
 chrono = { version = "0.4.19", default-features = false }
-ed25519 = { version = "1.3.0", default-features = false, features = [ "alloc", "pkcs8" ] }
 fern-logger = { version = "0.5.0", default-features = false }
 futures = { version = "0.3.17", default-features = false }
 fxhash = { version = "0.2.1", default-features = false }
@@ -43,7 +43,6 @@ hex = { version = "0.4.3", default-features = false }
 iota-crypto = { version = "0.9.1", default-features = false, features = [ "ed25519", "random", "blake2b" ] }
 log = { version = "0.4.14", default-features = false }
 multiaddr = { version = "0.13.0", default-features = false }
-pkcs8 = { version = "0.8.0", default-features = false, features = [ "alloc", "pem", "std" ] }
 rand = { version = "0.8.4", default-features = false }
 rpassword = { version = "5.0.1", default-features = false }
 serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
