--- a/bee-message/Cargo.toml
+++ b/bee-message/Cargo.toml
@@ -18,7 +18,7 @@ rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
 bee-pow = { version = "0.2.0", path = "../bee-pow", default-features = false }
-bee-ternary = { version = "0.5.2", default-features = false, features = [ "serde1" ] }
+bee-ternary = { version = "0.6.0", default-features = false, features = [ "serde" ] }
 
 bech32 = { version = "0.8.1", default-features = false }
 bitflags = { version = "1.3.2", default-features = false }
