--- a/bee-message/Cargo.toml
+++ b/bee-message/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/iotaledger/bee"
 license = "Apache-2.0"
 keywords = [ "iota", "tangle", "bee", "framework", "message" ]
 homepage = "https://www.iota.org"
+rust-version = "1.60"
 
 [package.metadata.docs.rs]
 # To build locally:
@@ -43,6 +44,6 @@ bee-test = { version = "0.1.0", path = "../bee-test", default-features = false }
 num_cpus = { version = "1.13.0", default-features = false }
 
 [features]
-dto = [ "serde", "serde_json" ]
-serde1 = [ "serde", "serde-big-array" ]
+dto = [ "serde", "dep:serde_json" ]
+serde = [ "dep:serde", "serde-big-array" ]
 std = [ ]
