--- a/bee-tangle/Cargo.toml
+++ b/bee-tangle/Cargo.toml
@@ -17,7 +17,7 @@ all-features = true
 rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
-bee-message = { version = "0.2.0", path = "../bee-message", default-features = false, features = [ "serde1" ] }
+bee-message = { version = "0.2.0", path = "../bee-message", default-features = false, features = [ "serde" ] }
 bee-runtime = { version = "0.1.1-alpha", path = "../bee-runtime", default-features = false }
 bee-storage = { version = "0.9.0", path = "../bee-storage/bee-storage", default-features = false }
 
