--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,7 @@ jobs:
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
-        rust: [stable, beta]
-        # Switch back to `windows-latest` when it reliably compiles again.
+        rust: [stable]
         os: [ubuntu-latest, macos-latest, windows-latest]
         experimental: [false]
         include:
