--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,15 +32,9 @@ jobs:
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
-        rust: [stable, beta]
-        # Switch back to `windows-latest` when it reliably compiles again.
+        rust: [stable]
         os: [ubuntu-latest, macos-latest, windows-latest]
         experimental: [false]
-        include:
-            # The following ensures that workflows relying on `nightly` don't break.
-          - rust: nightly
-            os: ubuntu-latest
-            experimental: true
 
     steps:
       - uses: actions/checkout@v2
