--- a/bee-ledger/Cargo.toml
+++ b/bee-ledger/Cargo.toml
@@ -23,7 +23,7 @@ digest = { version = "0.9.0", default-features = false, optional = true }
 futures = { version = "0.3.17", default-features = false, optional = true }
 hashbrown = { version = "0.11.2", default-features = false, optional = true }
 hex = { version = "0.4.3", default-features = false, optional = true }
-humanize-rs = "0.1.5"
+humanize-rs = { version = "0.1.5", default-features = false, optional = true }
 iota-crypto = { version = "0.10.0", default-features = false, features = [ "blake2b" ], optional = true }
 log = { version = "0.4.14", default-features = false, optional = true }
 ref-cast = { version = "1.0.6", default-features = false, optional = true }
@@ -52,6 +52,7 @@ workers = [
   "futures",
   "hashbrown",
   "hex",
+  "humanize-rs",
   "iota-crypto",
   "log",
   "ref-cast",
