--- a/bee-node/bee-node/config.chrysalis-devnet.toml
+++ b/bee-node/bee-node/config.chrysalis-devnet.toml
@@ -76,14 +76,16 @@ feature_proof_of_work = true
 white_flag_solidification_timeout = 2
 
 [snapshot]
-depth             = 50
-interval_synced   = 50
-interval_unsynced = 1000
 full_path         = "./snapshots/devnet/full_snapshot.bin"
 delta_path        = "./snapshots/devnet/delta_snapshot.bin"
 [[snapshot.download_urls]]
 full        = "http://dbfiles.chrysalis-devnet.iota.cafe/snapshots/hornet/latest-full_snapshot.bin"
 delta       = "http://dbfiles.chrysalis-devnet.iota.cafe/snapshots/hornet/latest-delta_snapshot.bin"
+[snapshot.create]
+enabled           = false
+depth             = 50
+interval_synced   = 50
+interval_unsynced = 1000
 
 [pruning]
 [pruning.milestones]
