--- a/bee-message/Cargo.toml
+++ b/bee-message/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bee-message"
-version = "0.1.6"
+version = "0.2.0"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
 description = "Implementation of the IOTA protocol message layouts"
@@ -12,14 +12,14 @@ homepage = "https://www.iota.org"
 
 [dependencies]
 bee-common = { version = "0.6.0", path = "../bee-common/bee-common", default-features = false }
-bee-pow = { version = "0.2.0", path = "../bee-pow", default-features = false }
-bee-ternary = { version = "0.5.2", default-features = false, features = [ "serde1" ] }
+bee-pow = { version = "0.3.0", path = "../bee-pow", default-features = false }
+bee-ternary = { version = "0.6.0", default-features = false, features = [ "serde" ] }
 
 bech32 = { version = "0.8.1", default-features = false }
 bytemuck = { version = "1.7.2", default-features = false }
 digest = { version = "0.9.0", default-features = false }
 hex = { version = "0.4.3", default-features = false }
-iota-crypto = { version = "0.9.1", default-features = false, features = [ "ed25519", "blake2b" ] }
+iota-crypto = { version = "0.9.2", default-features = false, features = [ "ed25519", "blake2b" ] }
 iterator-sorted = { version = "0.1.0", default-features = false }
 serde = { version = "1.0.130", default-features = false, features = [ "alloc" ], optional = true }
 thiserror = { version = "1.0.30", default-features = false }
