--- a/bee-test/Cargo.toml
+++ b/bee-test/Cargo.toml
@@ -11,10 +11,10 @@ keywords = [ "iota", "tangle", "bee", "framework", "test" ]
 homepage = "https://www.iota.org"
 
 [dependencies]
-bee-ledger = { version = "0.6.1", path = "../bee-ledger", default-features = false }
-bee-message = { version = "0.1.6", path = "../bee-message", default-features = false }
-bee-tangle = { version = "0.3.0", path = "../bee-tangle", default-features = false }
-bee-ternary = { version = "0.5.2", default-features = false, features = [ "serde1" ] }
+bee-ledger = { version = "0.7.0", path = "../bee-ledger", default-features = false }
+bee-message = { version = "0.2.0", path = "../bee-message", default-features = false }
+bee-tangle = { version = "0.4.0", path = "../bee-tangle", default-features = false }
+bee-ternary = { version = "0.6.0", default-features = false, features = [ "serde" ] }
 
 bytemuck = { version = "1.7.2", default-features = false }
 rand = { version = "0.8.4", default-features = false }
