--- a/bee-node/bee-node/config.alphanet.json
+++ b/bee-node/bee-node/config.alphanet.json
@@ -133,8 +133,7 @@
     "path": "./storage/alphanet/tangle"
   },
   "tangle": {
-    "belowMaxDepth": 15,
-    "numPartitions": 16
+    "belowMaxDepth": 15
   },
   "mqtt": {
     "address": "tcp://localhost:1883"
