Apply milestone route changes to config.rs

--- a/bee-node/bee-node/config.alphanet.json
+++ b/bee-node/bee-node/config.alphanet.json
@@ -102,8 +102,10 @@
       "/api/v2/receipts/:milestoneIndex",
       "/api/v2/treasury",
       "/api/v2/transactions/:transactionId/included-message",
-      "/api/v2/milestones/:milestoneIndex",
-      "/api/v2/milestones/:milestoneIndex/utxo-changes"
+      "/api/v2/milestones/:milestoneId",
+      "/api/v2/milestones/by-index/:milestoneIndex",
+      "/api/v2/milestones/:milestoneId/utxo-changes",
+      "/api/v2/milestones/by-index/:milestoneIndex/utxo-changes"
     ],
     "allowedIps": [
       "127.0.0.1",
