--- a/bee-message/Cargo.toml
+++ b/bee-message/Cargo.toml
@@ -23,25 +23,25 @@ bee-ternary = { version = "0.6.0", default-features = false, features = [ "serde
 
 bech32 = { version = "0.8.1", default-features = false }
 bitflags = { version = "1.3.2", default-features = false }
-bytemuck = { version = "1.8.0", default-features = false }
-derive_more = { version = "0.99.16", default-features = false, features = [ "from", "as_ref", "deref", "deref_mut" ] }
-digest = { version = "0.9.0", default-features = false }
-hashbrown = { version = "0.12.0", default-features = false, features = [ "ahash", "inline-more" ] }
+bytemuck = { version = "1.9.1", default-features = false }
+derive_more = { version = "0.99.17", default-features = false, features = [ "from", "as_ref", "deref", "deref_mut" ] }
+digest = { version = "0.10.3", default-features = false }
+hashbrown = { version = "0.12.1", default-features = false, features = [ "ahash", "inline-more" ] }
 hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
 iota-crypto = { version = "0.10.0", default-features = false, features = [ "ed25519", "blake2b" ] }
 iterator-sorted = { version = "0.1.0", default-features = false }
 packable = { version = "0.3.2", default-features = false, features = [ "serde", "primitive-types" ] }
 prefix-hex = { version = "0.2.0", default-features = false, features = [ "primitive-types1" ] }
 primitive-types = { version = "0.10.1", default-features = false, features = [ "serde" ] }
-serde = { version = "1.0.130", default-features = false, optional = true }
-serde-big-array = { version = "0.3.2", default-features = false, features = [ "const-generics" ], optional = true }
-serde_json = { version = "1.0.79", default-features = false, features = [ "alloc" ], optional = true }
-thiserror = { version = "1.0.30", default-features = false }
+serde = { version = "1.0.137", default-features = false, optional = true }
+serde-big-array = { version = "0.4.1", default-features = false, optional = true }
+serde_json = { version = "1.0.81", default-features = false, features = [ "alloc" ], optional = true }
+thiserror = { version = "1.0.31", default-features = false }
 
 [dev-dependencies]
 bee-test = { version = "0.1.0", path = "../bee-test", default-features = false }
 
-num_cpus = { version = "1.13.0", default-features = false }
+num_cpus = { version = "1.13.1", default-features = false }
 
 [features]
 dto = [ "serde", "dep:serde_json" ]
