--- a/bee-storage/bee-storage-sled/Cargo.toml
+++ b/bee-storage/bee-storage-sled/Cargo.toml
@@ -22,11 +22,11 @@ bee-message = { version = "0.2.0", path = "../../bee-message", default-features 
 bee-storage = { version = "0.12.0", path = "../bee-storage", default-features = false }
 bee-tangle = { version = "0.3.0", path = "../../bee-tangle", default-features = false }
 
-num_cpus = { version = "1.13.0", default-features = false }
+num_cpus = { version = "1.13.1", default-features = false }
 packable = { version = "0.3.2", default-features = false, features = [ "serde" ] }
-serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
+serde = { version = "1.0.137", default-features = false, features = [ "derive" ] }
 sled = { version = "0.34.7", default-features = false, features = [ "compression" ]}
-thiserror = "1.0.30"
+thiserror = { version = "1.0.31", default-features = false }
 
 [dev-dependencies]
 bee-storage-test = { path = "../bee-storage-test", default-features = false }
