--- a/.github/workflows/test-docs-build.yml
+++ b/.github/workflows/test-docs-build.yml
@@ -1,9 +1,9 @@
-name: Test Docs Wiki Build
+name: Test Docs Build
 
 on:
   pull_request:
     branches:
-      - mainnet-develop
+      - production
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -13,36 +13,9 @@ jobs:
   checks:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
-        with:
-          node-version: '16.x'
-      - name: Install dependencies
+      - uses: actions/checkout@v3
+      - name: Test Build
         run: |
           cd documentation
-          npm ci
-      - name: Setup Wiki and Test Build
-        run: |
-          # Move into the documentation folder
-          cd documentation
-          # Export this projects configuration as a variable
-          export config=$(cat EXTERNAL_DOCS_CONFIG)
-          # Set up the wiki using iota wiki cli.  This will clone the wiki repository as well the current repository
-          npm run setup
-          cd ../
-          # Sync the PR content with the freshly created wiki instance
-          rsync -av --progress ./ ./documentation/local-wiki/iota-wiki/external/bee --exclude .git --exclude node_modules --exclude local-wiki
-          # Change directory into the wiki
-          cd documentation/local-wiki/iota-wiki
-          # Install docusaurus and it's dependencies
-          yarn
-          # Replace the configuration placeholder with the configuration variable text
-          export replace_string='/\* AUTO GENERATED EXTERNAL DOCS CONFIG \*/'
-          perl -0pe 's#$ENV{replace_string}#$ENV{config}#' docusaurus.config.js > docusaurus.config.js.cpy
-          # Replace the existing configuration file with the edited one
-          rm -f docusaurus.config.js && mv docusaurus.config.js.cpy docusaurus.config.js
-          sed -i "s+baseUrl: '/',+baseUrl: '/bee/',+g" docusaurus.config.js
-          # Run the build process to test for any errors
-          yarn build
+          yarn install --immutable
+          npx docusaurus build
