--- a/bee-block/Cargo.toml
+++ b/bee-block/Cargo.toml
@@ -21,7 +21,7 @@ rustdoc-args = [ "--cfg", "doc_cfg" ]
 bee-pow = { version = "0.2.0", path = "../bee-pow", default-features = false }
 bee-ternary = { version = "0.6.0", default-features = false, features = [ "serde" ] }
 
-bech32 = { version = "0.8.1", default-features = false }
+bech32 = { version = "0.9.0", default-features = false }
 bitflags = { version = "1.3.2", default-features = false }
 bytemuck = { version = "1.9.1", default-features = false }
 derive_more = { version = "0.99.17", default-features = false, features = [ "from", "as_ref", "deref", "deref_mut" ] }
@@ -29,9 +29,9 @@ hashbrown = { version = "0.12.1", default-features = false, features = [ "ahash"
 hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
 iota-crypto = { version = "0.10.0", default-features = false, features = [ "ed25519", "blake2b" ] }
 iterator-sorted = { version = "0.1.0", default-features = false }
-packable = { version = "0.3.3", default-features = false, features = [ "serde", "primitive-types" ] }
-prefix-hex = { version = "0.2.0", default-features = false, features = [ "primitive-types1" ] }
-primitive-types = { version = "0.10.1", default-features = false, features = [ "serde" ] }
+packable = { version = "0.4.0", default-features = false, features = [ "serde", "primitive-types" ] }
+prefix-hex = { version = "0.4.0", default-features = false, features = [ "primitive-types" ] }
+primitive-types = { version = "0.11.1", default-features = false, features = [ "serde" ] }
 serde = { version = "1.0.137", default-features = false, optional = true }
 serde-big-array = { version = "0.4.1", default-features = false, optional = true }
 serde_json = { version = "1.0.81", default-features = false, features = [ "alloc" ], optional = true }
