--- a/bee-node/bee-node/config.alphanet.json
+++ b/bee-node/bee-node/config.alphanet.json
@@ -75,7 +75,7 @@
       "statusInterval": 10,
       "milestoneSyncCount": 200
     },
-    "byteCost": {
+    "rent": {
       "vByteCost": 500,
       "vByteFactorKey": 10,
       "vByteFactorData": 1
