--- a/bee-node/bee-node/config.alphanet.toml
+++ b/bee-node/bee-node/config.alphanet.toml
@@ -69,7 +69,7 @@ end         = 0
 status_interval       = 10
 milestone_sync_count  = 200
 
-[protocol.byte_cost]
+[protocol.rent]
 v_byte_cost = 500
 v_byte_factor_key = 10
 v_byte_factor_data = 1
