Replace warp in bee-rest-api with axum (#1239)
* Init Axum impl

* Add error.rs

* Replace warp with axum in white_flag.rs, add_peer.rs, info.rs, message.rs

* Remove warp

* Remove wrong dependencies

* Remove unused imports

* Fix merge conflicts

* Add / to routes

* Fix unsuccessful merges

* Merge API refactorings and JWT

* Update config files

* Skip JWT auth for public routes

* Fix URI matching

* Switch layers for Router

* Rename permission.rs to auth.rs

* Add fallback service

* Remove param from fallback

* use IntoResponse

* Fix imports

* Add JWT tool

* Add dashboard feature flags

* Predefine Dashboard routes

* Add DashboardUsername alias

* Fix auth.rs route_to_regex() import; fmt

* Apply JWT changes to bee-plugin-dashboard

* Update auth-helper dependency for bee-plugin-dashboard

* Update bee-plugin-dashboard\src\websocket\mod.rs

* Add bee-gossip dependency

* Fix permission > auth rename

* Remove unused imports

* Fix milestone timestamp

* Fix args access

* fmt

* Remove network id

* Impl Deref for ApiArgsFullNode

* Update allowed dashboard routes

* Sort parents in submit_message.rs

* Fix extension match in auth.rs

* Remove unused Arc imports

* Simplify expressions in endpoints; format error messages

* Improve error messages

* fmt

* Add missing dot for comment

Co-authored-by: /alex/ <alexander.schmidt@iota.org>

* Simplify function body

* Document that `with_white_flag_solidification_timeout` requires seconds.

* Use `map_or` instead `map_or_else`

Co-authored-by: /alex/ <alexander.schmidt@iota.org>

* Improve comment

Co-authored-by: /alex/ <alexander.schmidt@iota.org>

* Improve TODO comments

* Simplify MessageChildrenResponse response

* Improve TODO comments

* Improve comment to be more formal

Co-authored-by: /alex/ <alexander.schmidt@iota.org>

* Add type hint

* Improve comment

* add "_json" prefix instea

--- a/bee-node/bee-node/config.alphanet.toml
+++ b/bee-node/bee-node/config.alphanet.toml
@@ -76,34 +76,23 @@ v_byte_factor_data = 1
 
 [rest_api]
 bind_address          = "/ip4/0.0.0.0/tcp/14265"
-feature_proof_of_work = true
+jwt_salt              = "Bee"
 public_routes         = [
-    "/health",
-    "/api/v2/info",
-    "/api/v2/tips",
-    "/api/v2/blocks",
-    "/api/v2/blocks/:blockId",
-    "/api/v2/blocks/:blockId/metadata",
-    "/api/v2/blocks/:blockId/raw",
-    "/api/v2/blocks/:blockId/children",
-    "/api/v2/outputs/:outputId",
-    "/api/v2/addresses/:address",
-    "/api/v2/addresses/ed25519/:address",
-    "/api/v2/addresses/:address/outputs",
-    "/api/v2/addresses/ed25519/:address/outputs",
-    "/api/v2/receipts",
-    "/api/v2/receipts/:milestoneIndex",
-    "/api/v2/treasury",
-    "/api/v2/transactions/:transactionId/included-block",
-    "/api/v2/milestones/:milestoneId",
-    "/api/v2/milestones/by-index/:milestoneIndex",
-    "/api/v2/milestones/:milestoneId/utxo-changes",
-    "/api/v2/milestones/by-index/:milestoneIndex/utxo-changes"
+      "/health",
+      "/api/v2/info",
+      "/api/v2/tips",
+      "/api/v2/blocks*",
+      "/api/v2/transactions*",
+      "/api/v2/milestones*",
+      "/api/v2/outputs*",
+      "/api/v2/treasury",
+      "/api/v2/receipts*",
 ]
-allowed_ips = [
-    "127.0.0.1",
-    "::1"
+protected_routes       = [
+      "/api/v2/*",
+      "/api/plugins/*"
 ]
+feature_proof_of_work = true
 white_flag_solidification_timeout = 2
 
 [snapshot]
