--- a/bee-node/bee-plugin/bee-plugin-dashboard/Cargo.toml
+++ b/bee-node/bee-plugin/bee-plugin-dashboard/Cargo.toml
@@ -12,6 +12,7 @@ homepage = "https://www.iota.org"
 
 [dependencies]
 bee-block = { version = "0.1.0", path = "../../../bee-block", default-features = false }
+bee-gossip = { version = "0.6.0", path = "../../../bee-network/bee-gossip", default-features = false }
 bee-ledger = { version = "0.7.0", path = "../../../bee-ledger", default-features = false, features = [ "workers" ] }
 bee-protocol = { version = "0.2.0", path = "../../../bee-protocol", default-features = false, features = [ "workers" ] }
 bee-rest-api = { version = "0.2.0", path = "../../../bee-api/bee-rest-api", default-features = false, features = [ "endpoints", "peer" ] }
@@ -20,7 +21,7 @@ bee-storage = { version = "0.12.0", path = "../../../bee-storage/bee-storage", d
 bee-tangle = { version = "0.3.0", path = "../../../bee-tangle", default-features = false }
 
 async-trait = { version = "0.1.56", default-features = false }
-auth-helper = { version = "0.1.0", default-features = false }
+auth-helper = { version = "0.2.0", default-features = false }
 cap = { version = "0.1.0", default-features = false }
 futures = { version = "0.3.21", default-features = false }
 hex = { version = "0.4.3", default-features = false }
