--- a/bee-node/bee-node/config.alphanet.json
+++ b/bee-node/bee-node/config.alphanet.json
@@ -86,18 +86,17 @@
     "jwtSalt": "Bee",
     "publicRoutes": [
       "/health",
-      "/api/v2/info",
-      "/api/v2/tips",
-      "/api/v2/blocks*",
-      "/api/v2/transactions*",
-      "/api/v2/milestones*",
-      "/api/v2/outputs*",
-      "/api/v2/treasury",
-      "/api/v2/receipts*"
+      "/api/core/v2/info",
+      "/api/core/v2/tips",
+      "/api/core/v2/blocks*",
+      "/api/core/v2/transactions*",
+      "/api/core/v2/milestones*",
+      "/api/core/v2/outputs*",
+      "/api/core/v2/treasury",
+      "/api/core/v2/receipts*"
     ],
     "protectedRoutes": [
-      "/api/v2/*",
-      "/api/plugins/*"
+      "/api/*"
     ],
     "featureProofOfWork": true,
     "whiteFlagSolidificationTimeout": 2
