--- a/bee-node/bee-node/config.alphanet.toml
+++ b/bee-node/bee-node/config.alphanet.toml
@@ -79,18 +79,17 @@ bind_address          = "/ip4/0.0.0.0/tcp/14265"
 jwt_salt              = "Bee"
 public_routes         = [
       "/health",
-      "/api/v2/info",
-      "/api/v2/tips",
-      "/api/v2/blocks*",
-      "/api/v2/transactions*",
-      "/api/v2/milestones*",
-      "/api/v2/outputs*",
-      "/api/v2/treasury",
-      "/api/v2/receipts*",
+      "/api/core/v2/info",
+      "/api/core/v2/tips",
+      "/api/core/v2/blocks*",
+      "/api/core/v2/transactions*",
+      "/api/core/v2/milestones*",
+      "/api/core/v2/outputs*",
+      "/api/core/v2/treasury",
+      "/api/core/v2/receipts*",
 ]
 protected_routes       = [
-      "/api/v2/*",
-      "/api/plugins/*"
+      "/api/*"
 ]
 feature_proof_of_work = true
 white_flag_solidification_timeout = 2
