--- a/bee-pow/Cargo.toml
+++ b/bee-pow/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bee-pow"
-version = "0.2.0"
+version = "1.0.0-alpha.1"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
 description = "Provides Proof of Work utilities for the IOTA protocol"
@@ -17,9 +17,9 @@ all-features = true
 rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
-bee-ternary = { version = "0.6.0", default-features = false }
+bee-ternary = { version = "1.0.0-alpha.1", default-features = false }
 
-iota-crypto = { version = "0.12.1", default-features = false, features = [ "blake2b", "digest", "curl-p" ] }
+iota-crypto = { version = "0.13.0", default-features = false, features = [ "blake2b", "digest", "curl-p" ] }
 thiserror = { version = "1.0.31", default-features = false }
 
 [dev-dependencies]
