--- a/bee-block/Cargo.toml
+++ b/bee-block/Cargo.toml
@@ -18,7 +18,7 @@ all-features = true
 rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
-bee-pow = { version = "0.2.0", path = "../bee-pow", default-features = false }
+bee-pow = { version = "1.0.0-alpha.1", default-features = false }
 bee-ternary = { version = "0.6.0", default-features = false, features = [ "serde" ] }
 
 bech32 = { version = "0.9.0", default-features = false }
