--- a/bee-api/bee-api-types/Cargo.toml
+++ b/bee-api/bee-api-types/Cargo.toml
@@ -20,6 +20,6 @@ rustdoc-args = [ "--cfg", "doc_cfg" ]
 bee-block = { version = "0.1.0", path = "../../bee-block", default-features = false, features = [ "dto" ] }
 bee-ledger = { version = "0.7.0", path = "../../bee-ledger", default-features = false }
 
-axum = { version = "0.5.4", default-features = false, features = [ "json", "headers", "original-uri" ] }
+axum = { version = "0.5.4", default-features = false, features = [ "json" ] }
 serde = { version = "1.0.137", default-features = false, features = [ "derive" ] }
 thiserror = { version = "1.0.31", default-features = false }
