--- a/bee-node/bee-plugin/bee-plugin-dashboard/Cargo.toml
+++ b/bee-node/bee-plugin/bee-plugin-dashboard/Cargo.toml
@@ -11,6 +11,7 @@ keywords = [ "iota", "tangle", "bee", "plugin", "dashboard" ]
 homepage = "https://www.iota.org"
 
 [dependencies]
+bee-api-types = { version = "1.0.0-alpha.1", path = "../../../bee-api/bee-api-types", default-features = false }
 bee-block = { version = "0.1.0", path = "../../../bee-block", default-features = false }
 bee-gossip = { version = "0.6.0", path = "../../../bee-network/bee-gossip", default-features = false }
 bee-ledger = { version = "0.7.0", path = "../../../bee-ledger", default-features = false, features = [ "workers" ] }
