--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = [
 	"bee-api/bee-api-types",
 	"bee-api/bee-rest-api",
 	"bee-block",
-	"bee-ledger",
+	"bee-ledger/bee-ledger",
 	"bee-network/bee-autopeering",
 	"bee-network/bee-gossip",
 	"bee-node/bee-node",
