--- a/bee-node/bee-node/Cargo.toml
+++ b/bee-node/bee-node/Cargo.toml
@@ -14,7 +14,7 @@ homepage = "https://www.iota.org"
 bee-autopeering = { version = "0.5.0", path = "../../bee-network/bee-autopeering", default-features = false, features = [ "rocksdb" ] }
 bee-block = { version = "0.1.0", path = "../../bee-block", default-features = false }
 bee-gossip = { version = "0.6.0", path = "../../bee-network/bee-gossip", default-features = false, features = [ "full" ] }
-bee-ledger = { version = "0.7.0", path = "../../bee-ledger", default-features = false, features = [ "workers" ] }
+bee-ledger = { version = "0.7.0", path = "../../bee-ledger/bee-ledger", default-features = false, features = [ "workers" ] }
 bee-plugin = { version = "0.1.0", path = "../bee-plugin/bee-plugin", default-features = false }
 bee-plugin-dashboard = { version = "0.1.0", path = "../bee-plugin/bee-plugin-dashboard", default-features = false, optional = true }
 bee-plugin-mps = { version = "0.1.0", path = "../bee-plugin/bee-plugin-mps", default-features = false }
