--- a/bee-test/Cargo.toml
+++ b/bee-test/Cargo.toml
@@ -12,7 +12,7 @@ homepage = "https://www.iota.org"
 
 [dependencies]
 bee-block = { version = "0.1.0", path = "../bee-block", default-features = false }
-bee-ledger = { version = "0.7.0", path = "../bee-ledger", default-features = false }
+bee-ledger = { version = "0.7.0", path = "../bee-ledger/bee-ledger", default-features = false }
 bee-tangle = { version = "0.3.0", path = "../bee-tangle", default-features = false }
 bee-ternary = { version = "0.6.0", default-features = false, features = [ "serde" ] }
 
