--- a/bee-node/bee-node/Cargo.toml
+++ b/bee-node/bee-node/Cargo.toml
@@ -19,7 +19,7 @@ bee-plugin = { version = "0.1.0", path = "../bee-plugin/bee-plugin", default-fea
 bee-plugin-dashboard = { version = "0.1.0", path = "../bee-plugin/bee-plugin-dashboard", default-features = false, optional = true }
 bee-plugin-mps = { version = "0.1.0", path = "../bee-plugin/bee-plugin-mps", default-features = false }
 bee-plugin-version-checker = { version = "0.1.0", path = "../bee-plugin/bee-plugin-version-checker", default-features = false }
-bee-protocol = { version = "0.2.2", path = "../../bee-protocol", default-features = false, features = [ "workers" ] }
+bee-protocol = { version = "0.2.2", path = "../../bee-protocol/bee-protocol", default-features = false, features = [ "workers" ] }
 bee-rest-api = { version = "0.2.0", path = "../../bee-api/bee-rest-api", default-features = false, features = [ "endpoints", "peer" ] }
 bee-runtime = { version = "0.1.1-alpha", path = "../../bee-runtime", default-features = false }
 bee-storage = { version = "0.12.0", path = "../../bee-storage/bee-storage", default-features = false }
