--- a/bee-protocol/bee-protocol/Cargo.toml
+++ b/bee-protocol/bee-protocol/Cargo.toml
@@ -17,14 +17,14 @@ all-features = true
 rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
-bee-autopeering = { version = "0.5.0", path = "../bee-network/bee-autopeering", default-features = false }
-bee-block = { version = "0.1.0", path = "../bee-block", default-features = false, features = [ "serde" ] }
-bee-gossip = { version = "0.6.0", path = "../bee-network/bee-gossip", default-features = false }
-bee-ledger = { version = "0.7.0", path = "../bee-ledger/bee-ledger", default-features = false, features = [ "workers" ], optional = true }
+bee-autopeering = { version = "0.5.0", path = "../../bee-network/bee-autopeering", default-features = false }
+bee-block = { version = "0.1.0", path = "../../bee-block", default-features = false, features = [ "serde" ] }
+bee-gossip = { version = "0.6.0", path = "../../bee-network/bee-gossip", default-features = false }
+bee-ledger = { version = "0.7.0", path = "../../bee-ledger/bee-ledger", default-features = false, features = [ "workers" ], optional = true }
 bee-pow = { version = "1.0.0-alpha.1", default-features = false }
-bee-runtime = { version = "0.1.1-alpha", path = "../bee-runtime", default-features = false, optional = true }
-bee-storage = { version = "0.12.0", path = "../bee-storage/bee-storage", default-features = false, optional = true }
-bee-tangle = { version = "0.3.0", path = "../bee-tangle", default-features = false, optional = true }
+bee-runtime = { version = "0.1.1-alpha", path = "../../bee-runtime", default-features = false, optional = true }
+bee-storage = { version = "0.12.0", path = "../../bee-storage/bee-storage", default-features = false, optional = true }
+bee-tangle = { version = "0.3.0", path = "../../bee-tangle", default-features = false, optional = true }
 
 async-channel = { version = "1.6.1", default-features = false, optional = true }
 async-priority-queue = { version = "0.1.1", default-features = false, optional = true }
