--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
 	"bee-api/bee-rest-api",
 	"bee-block",
 	"bee-ledger/bee-ledger",
+	"bee-ledger/bee-ledger-types",
 	"bee-network/bee-autopeering",
 	"bee-network/bee-gossip",
 	"bee-node/bee-node",
