--- a/bee-tangle/Cargo.toml
+++ b/bee-tangle/Cargo.toml
@@ -17,7 +17,7 @@ all-features = true
 rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [dependencies]
-bee-block = { version = "0.1.0", path = "../bee-block", default-features = false, features = [ "serde" ] }
+bee-block = { version = "1.0.0-beta.1", path = "../bee-block", default-features = false, features = [ "serde" ] }
 bee-runtime = { version = "0.1.1-alpha", path = "../bee-runtime", default-features = false }
 bee-storage = { version = "0.12.0", path = "../bee-storage/bee-storage", default-features = false }
 
