--- a/bee-test/Cargo.toml
+++ b/bee-test/Cargo.toml
@@ -11,7 +11,7 @@ keywords = [ "iota", "tangle", "bee", "framework", "test" ]
 homepage = "https://www.iota.org"
 
 [dependencies]
-bee-block = { version = "0.1.0", path = "../bee-block", default-features = false }
+bee-block = { version = "1.0.0-beta.1", path = "../bee-block", default-features = false }
 bee-ledger = { version = "0.7.0", path = "../bee-ledger/bee-ledger", default-features = false }
 bee-tangle = { version = "0.3.0", path = "../bee-tangle", default-features = false }
 bee-ternary = { version = "1.0.0-alpha.1", default-features = false, features = [ "serde" ] }
